--- a/Index.html
+++ b/Index.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
-    <title>Document</title>
-
+    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-firestore.js"></script>
+    <title>Insult Generator</title>
+    <header id="Header">Insult Generator</header>
 </head>
 
 
 <body>
 
-    <header id="Header">Insult Generator</header>
+
     <form>
-      
-        <input type="checkbox" id="Name" name="Name" value="Name">
-        <label for="Name"> Name</label><br>
+        <div id="nameBox"><input type="checkbox" id="Name" name="Name" value="Name">
+            <label for="Name"> Name</label><br></div>
+
 
 
         <select id="BigInsult">
@@ -41,9 +43,9 @@
 
         </select> <br> <br>
 
-        <label for="from">from</label>
+        <label for="from">to</label>
         <input type="text" name="from" id="from">
-        <label for="to">to</label>
+        <label for="to">from</label>
         <input type="text" name="to" id="to">
         <input type="submit" name="submit" id="submit">
     </form>
