Css changes and tweaks

--- a/Index.html
+++ b/Index.html
@@ -8,12 +8,13 @@
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-firestore.js"></script>
     <title>Insult Generator</title>
-    <header id="Header">Insult Generator</header>
+    
 </head>
 
 
 <body>
-
+    <div id="topBlock"></div>
+<header id="Header">Insult Generator</header>
 
     <form>
         <div id="nameBox"><input type="checkbox" id="Name" name="Name" value="Name">
@@ -52,6 +53,7 @@
     <div id="InsultResult"></div>
 
 </body>
+<footer id="bottomBlock"></footer>
 <script type="module" src="Hoofdtaak.js"></script>
 
 </html>
