--- a/Index.html
+++ b/Index.html
@@ -52,6 +52,8 @@
         <input type="text" name="to" id="to">
         <input type="submit" name="submit" id="submit">
     </form>
+    <button type="button" name="Generate" id="generate">Generate random</button>
+    <div id='randomResult'></div>
     <div id="InsultResult"></div>
     <h1>Messages:</h1>
     <div id="message">
